# rosetta

./: .gitignore  LICENSE  README.md  build.sh  dbms_config.sample.json  install.sh  pyproject.toml  rosetta_config.json  rosetta_config.sample.json  setup.py  uninstall.sh
.codebuddy/plans/: 交互模式_RERUN_功能设计_a4794f19.md
.codebuddy/skills/rosetta-github-release/: SKILL.md
.codebuddy/skills/rosetta-github-release/references/: release-process.md
.github/workflows/: publish.yml
docs/: USER_GUIDE.md  gcov-coverage-guide.md  mcp_architecture.md  mcp_client_concepts.md  mcp_server_concepts.md  mtr_comparison_logic.md  online_ddl_no_pk_test_cases.md
rosetta/: README.md  __init__.py  __main__.py  benchmark.py  buglist.py  cli.py  comparator.py  config.py  executor.py  flamegraph.py  interactive.py  models.py  parser.py  paths.py  result_parser.py  runner.py  serve.py  ui.py  whitelist.py
rosetta/cli/: __init__.py  config_cmd.py  exec.py  interactive_cmd.py  list_cmd.py  main.py  mtr_cmd.py  output.py  result.py  result_cmd.py  run.py  status.py
rosetta/mtr/: __init__.py  adapter.py  connection.py  error_handler.py  executor.py  nodes.py  parser.py  result_processor.py  variable.py
rosetta/reporter/: __init__.py  bench_html.py  bench_text.py  history.py  html.py  text.py
skills/rosetta/: README.md  SKILL.md
skills/rosetta/examples/: bench.example.json  dbms_config.example.json  rosetta_config.example.json
skills/rosetta/references/: best-practices-sop.md  commands.md  config-guide.md  troubleshooting.md
skills/rosetta/scripts/: install_rosetta.py  rosetta_wrapper.py
tests/: test_cli.py
vscode-extension/: language-configuration.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
vscode-extension/src/: commands.ts  extension.ts  rosettaCli.ts  rosettaServer.ts
vscode-extension/src/providers/: codeLens.ts
vscode-extension/src/views/: dbmsTree.ts  historyTree.ts  reportWebview.ts
(+2 files in other folders)
